// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          class="uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j"
        >
          <label
            class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
            for="_r_c_"
          >
            Test
          </label>
          <span
            class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8n uv_1yhcak81a uv_1yhcak82m"
          >
            *
          </span>
        </div>
        <div
          class="uv_1vl8ympc uv_1vl8ymp6 uv_1vl8ymp5 uv_78oem50"
          style="--uv_ivy5ld0: 1fr auto; --uv_ivy5ld1: 1fr auto; --uv_ivy5ld2: 1fr auto; --uv_ivy5ld3: 1fr auto; --uv_ivy5ld4: 1fr auto; --uv_ivy5ld5: 1fr auto;"
        >
          <div
            class="uv_1vl8ympb"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="uv_1vl8ymp2 uv_1vl8ymp1"
              data-testid="unit-input"
              id="_r_c_"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
          <div
            aria-label="test-unit"
            class="uv_1vl8ympg uv_1vl8ympf uv_gqqb10"
            style="--uv_1vl8ymp0: 12.6rem;"
          >
            <div
              aria-controls="_r_k_"
              aria-describedby="_r_k_"
              class="uv_pjfil59 uv_pjfil5b"
              tabindex="-1"
            >
              <div
                class="uv_mxir930 uv_mxir932d uv_mxir935j"
              >
                <div
                  aria-controls="_r_k_"
                  aria-expanded="false"
                  class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="uv_y472cym uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                  >
                    Days
                  </span>
                  <div
                    class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowDownIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`unitInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_1vl8ympc uv_1vl8ymp6 uv_1vl8ymp5 uv_78oem50"
          style="--uv_ivy5ld0: 1fr auto; --uv_ivy5ld1: 1fr auto; --uv_ivy5ld2: 1fr auto; --uv_ivy5ld3: 1fr auto; --uv_ivy5ld4: 1fr auto; --uv_ivy5ld5: 1fr auto;"
        >
          <div
            class="uv_1vl8ympb"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="uv_1vl8ymp2 uv_1vl8ymp1"
              data-testid="unit-input"
              id="_r_0_"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
          <div
            aria-label="test-unit"
            class="uv_1vl8ympg uv_1vl8ympf uv_gqqb10"
            style="--uv_1vl8ymp0: 12.6rem;"
          >
            <div
              aria-controls="_r_6_"
              aria-describedby="_r_6_"
              class="uv_pjfil59 uv_pjfil5b"
              tabindex="-1"
            >
              <div
                class="uv_mxir930 uv_mxir932d uv_mxir935j"
              >
                <div
                  aria-controls="_r_6_"
                  aria-expanded="false"
                  class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="uv_y472cy4 uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81d uv_1yhcak835"
                    style="--uv_1eu8od81: nowrap;"
                  >
                    Select item
                  </span>
                  <div
                    class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowDownIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
